# directory_of_organizations

./: .gitignore
app/: pyproject.toml
directory_app/: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
directory_app/src/app/application/interfaces/: model.py  repository.py
directory_app/src/app/core/: config.py  containers.py
directory_app/src/app/domain/: dto.py
directory_app/src/app/infrastructure/db/: database.py  models.py
directory_app/src/app/infrastructure/db/repository/: repository.py
